--- a/task5/index.html
+++ b/task5/index.html
@@ -8,9 +8,9 @@
         <form action="#">
             <label>
                 Текст
-                <input type="text" placeholder="Введите текст">
+                <input type="text" placeholder="Введите текст" id="TextInput">
             </label>
-            <button type="submit">
+            <button type="submit" id="Button">
                 Вывести текст в консоль и удалить из формы
             </button>
         </form>
